# generic-image-classifier

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/generic_image_classifier/: __init__.py  __main__.py  cli.py  device.py  logging.py  pipeline.py
src/generic_image_classifier/config/: __init__.py  io.py
src/generic_image_classifier/data/: __init__.py  loading.py  transforms.py  zip.py
src/generic_image_classifier/models/: __init__.py  backbones.py  inference.py  optim.py  training.py
src/generic_image_classifier/schemas/: __init__.py  config.py  dataset.py  model.py
src/generic_image_classifier/ui/: __init__.py  app.py  classify.py  components.py  plots.py  report.py  theme.py
tests/: factories.py  test_config.py  test_dataset_loading.py  test_device.py  test_loading.py  test_models.py  test_schemas.py  test_ui.py  test_zip.py
